--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,3 +1,16 @@
+server {
+  listen 80;
+  server_name example.com;
+
+  location / {
+    include /etc/nginx/includes/proxy.conf;
+    proxy_pass http://app_app_1;
+  }
+
+  access_log off;
+  error_log  /var/log/nginx/error.log error;
+}
+
 # Default
 server {
   listen 80 default_server;
