Example created to demo

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,17 +1,5 @@
-server {
-  listen 80;
-  server_name example.com;
+include /etc/nginx/sites-enabled/*;
 
-  location / {
-    include /etc/nginx/includes/proxy.conf;
-    proxy_pass http://app_app_1;
-  }
-
-  access_log off;
-  error_log  /var/log/nginx/error.log error;
-}
-
-# Default
 server {
   listen 80 default_server;
 
