--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,16 @@
 version: '3'
+
+networks:
+  example_com_proxy:
+    external:
+      name: example_com
+
 services:
   proxy:
     build: ./
     networks:
-      - example_com
+      - example_com_proxy
     ports:
       - 80:80
-
-networks:
-  example_com:
-    external:
-      name: app_default
+    volumes:
+      - ./enabled:/etc/nginx/sites-enabled
