--- a/example.com/app/docker-compose.yml
+++ b/example.com/app/docker-compose.yml
@@ -1,7 +1,15 @@
 version: '3'
+
+networks:
+  example_com:
+    driver: bridge
+
 services:
   app:
     image: nginx:1.12
+    container_name: example_com_app
+    networks:
+      - example_com
     volumes:
       - .:/usr/share/nginx/html/
     expose:
