--- a/docker/template/docker-compose.yml
+++ b/docker/template/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
 <?php
 foreach($sites as $site) {
   $project = str_replace('_', '', $site->network);
-  $name = "{$project}_{$site->network}"
+  $name = "{$project}_{$site->network}";
   echo "  {$site->network}_proxy:", PHP_EOL,
        "     external:", PHP_EOL,
        "       name: {$name}", PHP_EOL;
